# django_project_template

./: .editorconfig  .gitignore  README.md  pyproject.toml  requirements.txt
project_name/: settings.py  urls.py
users/: admin.py  models.py  serializers.py  tests.py  urls.py  views.py
users/migrations/: 0001_initial.py
