[tool.poetry]
name = "{{ project_name }}"
version = "0.1.0"
description = ""
authors = ["Dong-Young Kim <31337.persona@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
Django = "^3.2.4"
djangorestframework = "^3.12.4"
django-cors-headers = "^3.7.0"
django-extensions = "^3.1.3"

[tool.poetry.dev-dependencies]
ipython = "^7.24.1"
Werkzeug = "^2.0.1"
django-debug-toolbar = "^3.2.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
